--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,15 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -23,13 +31,15 @@
             android:label="@string/app_name"
             android:launchMode="singleInstance"
             android:screenOrientation="nosensor" >
-            <intent-filter> 
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-	
+
                 <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.kregelbagel.android.camera.CameraPreviewSampleActivity" >
         </activity>
     </application>
 
